crates/ruff/tests/snapshots/format__output_format_azure.snap
---
source: crates/ruff/tests/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - azure
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
##vso[task.logissue type=error;sourcepath=[TMP]/input.py;linenumber=3;columnnumber=16;code=unformatted;]File would be reformatted

----- stderr -----
