crates/ruff/tests/snapshots/format__output_format_concise.snap
---
source: crates/ruff/tests/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - concise
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
input.py: error[unformatted] File would be reformatted
1 file would be reformatted

----- stderr -----
