crates/ruff/tests/snapshots/format__output_format_full.snap
---
source: crates/ruff/tests/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - full
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
error[unformatted][*]: File would be reformatted
--> input.py:1:1
  - \
1 | from test import say_hy
2 | 
3 | if __name__ == "__main__":

1 file would be reformatted

----- stderr -----
