crates/ruff/tests/snapshots/format__output_format_github.snap
---
source: crates/ruff/tests/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - github
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
::error title=Ruff (unformatted),file=[TMP]/input.py,line=3,col=16,endLine=4,endColumn=34::input.py:3:16: unformatted: File would be reformatted

----- stderr -----
