crates/ruff/tests/snapshots/format__output_format_gitlab.snap
---
source: crates/ruff/tests/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - gitlab
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
[
  {
    "check_name": "unformatted",
    "description": "unformatted: File would be reformatted",
    "severity": "major",
    "fingerprint": "d868d7da11a65fcf",
    "location": {
      "path": "input.py",
      "positions": {
        "begin": {
          "line": 3,
          "column": 16
        },
        "end": {
          "line": 4,
          "column": 34
        }
      }
    }
  }
]
----- stderr -----
