crates/ruff/tests/snapshots/format__output_format_grouped.snap
---
source: crates/ruff/tests/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - grouped
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
input.py:
  3:16 unformatted: File would be reformatted

1 file would be reformatted

----- stderr -----
