crates/ruff/tests/snapshots/format__output_format_json.snap
---
source: crates/ruff/tests/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - json
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
[
  {
    "cell": null,
    "code": "unformatted",
    "end_location": {
      "column": 1,
      "row": 1
    },
    "filename": "[TMP]/input.py",
    "fix": {
      "applicability": "safe",
      "edits": [
        {
          "content": "from test import say_hy\n\nif __name__ == \"__main__\":\n    say_hy(\"dear Ruff contributor\")\n",
          "end_location": {
            "column": 1,
            "row": 6
          },
          "location": {
            "column": 1,
            "row": 1
          }
        }
      ],
      "message": null
    },
    "location": {
      "column": 1,
      "row": 1
    },
    "message": "File would be reformatted",
    "noqa_row": null,
    "url": "https://docs.astral.sh/ruff/rules/unformatted"
  }
]
----- stderr -----
