crates/ruff/tests/snapshots/format__output_format_pylint.snap
---
source: crates/ruff/tests/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - pylint
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
input.py:3: [unformatted] File would be reformatted

----- stderr -----
