crates/ruff/tests/snapshots/format__output_format_rdjson.snap
---
source: crates/ruff/tests/format.rs
info:
  program: ruff
  args:
    - format
    - "--no-cache"
    - "--output-format"
    - rdjson
    - "--check"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
{
  "diagnostics": [
    {
      "code": {
        "value": "unformatted"
      },
      "location": {
        "path": "[TMP]/input.py",
        "range": {
          "end": {
            "column": 34,
            "line": 4
          },
          "start": {
            "column": 16,
            "line": 3
          }
        }
      },
      "message": "File would be reformatted",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 1,
              "line": 5
            },
            "start": {
              "column": 1,
              "line": 1
            }
          },
          "text": "from test import say_hy\n\nif __name__ == \"__main__\":\n    say_hy(\"dear Ruff contributor\")\n"
        }
      ]
    }
  ],
  "severity": "WARNING",
  "source": {
    "name": "ruff",
    "url": "https://docs.astral.sh/ruff"
  }
}
----- stderr -----
